@startuml

title __HOMEWORK_05-06-2025's Class Diagram__\n

  namespace be.epfc {
    abstract class be.epfc.Animal {
    }
  }
  

  namespace be.epfc {
    class be.epfc.Carnassier {
    }
  }
  

  namespace be.epfc {
    class be.epfc.Carnivore {
    }
  }
  

  namespace be.epfc {
    enum CategorieEnum {
    }
  }
  

  namespace be.epfc {
    class be.epfc.DentitionPrincipal {
    }
  }
  

  namespace be.epfc {
    abstract class be.epfc.Espece {
    }
  }
  

  namespace be.epfc {
    class be.epfc.Herbivore {
    }
  }
  

  namespace be.epfc {
    class be.epfc.Main {
    }
  }
  

  namespace be.epfc {
    class be.epfc.Omnivore {
    }
  }
  

  namespace be.epfc {
    class be.epfc.Vegetal {
    }
  }
  

  namespace be.epfc {
    class be.epfc.Volaille {
    }
  }
  

  be.epfc.Animal -up-|> be.epfc.Espece
  be.epfc.Carnassier -up-|> be.epfc.Animal
  be.epfc.Carnassier o-- be.epfc.DentitionPrincipal : dentitionPrincipal
  be.epfc.Carnivore -up-|> be.epfc.Animal
  be.epfc.Carnivore o-- be.epfc.DentitionPrincipal : dentitionPrincipal
  be.epfc.Herbivore -up-|> be.epfc.Animal
  be.epfc.Herbivore o-- be.epfc.DentitionPrincipal : dentitionPrincipal
  be.epfc.Omnivore -up-|> be.epfc.Animal
  be.epfc.Omnivore o-- be.epfc.DentitionPrincipal : dentitionPrincipal
  be.epfc.Vegetal -up-|> be.epfc.Espece
  be.epfc.Vegetal o-- be.epfc.CategorieEnum : categorie
  be.epfc.Volaille -up-|> be.epfc.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
